public enum TileType
{
    GRASS = 001,    //‘Œ´
    THICKET = 002,  //‚µ‚°‚Ý
    FOREST = 003,   //X
    SAND = 004,     //»
    WATER = 005,    //…
    WALL = 006,     //•Ç

    CASTLE_LEFT_TOP = 101, //é‚Ì¶ã
    CASTLE_RIGHT_TOP = 102, //é‚Ì‰Eã
    CASTLE_LEFT_BOTTOM = 103, //é‚Ì¶‰º
    CASTLE_RIGHT_BOTTOM = 104, //é‚Ì‰E‰º

    CITY_LEFT = 111,    //ŠX‚Ì¶
    CITY_RIGHT = 112,   //ŠX‚Ì‰E
}